# Gamma-Node

./: .commitmsg  .gitignore  CLAUDE.md  EXPANSION.md  OPTIONS.md  README.md  SPEC.md  coi-serviceworker.min.js  gamma-node-editor.html  homepage.html  index.html
.github/workflows/: pages.yml
.tmp-ai-cal/: README.md  calibration-meta.json
.tmp-ai-cal2/: README.md  calibration-meta.json
demos/: README.md  channel_routing.gpatch  keyer_pipeline.gpatch  mask_set_ops.gpatch
set-theory/: index.html
tools/pmap-harness/: .gitignore  INSTRUCTIONS.md  PLATEAU.md  journal.md  package-lock.json  package.json  render.mjs  setup.mjs  stamp-test.mjs
tools/pmap-harness/prompts/: audit.md  system.md
tools/pmap-harness/refs/: MANIFEST.json
wasm-build/: CMakeLists.txt  README.md  build-gamma-wasm.sh
